[gd_scene load_steps=3 format=3 uid="uid://do1pmtbmc423e"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_etmgv"]
[ext_resource type="PackedScene" uid="uid://b714sttnt1435" path="res://UI/options_menu.tscn" id="3_v5o6j"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_etmgv")
options_scene = ExtResource("3_v5o6j")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.443137)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESUME"

[node name="RestartButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESTART"

[node name="OptionsButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"
